<resources>
    <string name="app_name">Pokemon</string>
    <string name="tv_no_pokemons">No Pokemons</string>
    <string name="tv_no_pokemons_desc">To add some pokemons,\npress + icon</string>
    <string name="et_pokemon_desc_hint">Description</string>
    <string name="btn_save">Save</string>
    <string name="et_pokemon_name">Name</string>
    <string name="iv_pokemon_name_icon">Pokemon name icon</string>
    <string name="iv_pokemon_description_icon">Pokemon description icon</string>
    <string name="et_pokemon_moves">Moves</string>
    <string name="empty_fields_warning">Please fill out the given fields</string>
    <string name="non_numeric_value_warning">Please enter numerical values for weight and height</string>
    <string name="alert_dialog_message">Are you sure that you want to abandon your data?</string>
    <string name="alert_dialog_title">Warning</string>
    <string name="iv_pokemon_empty_state">iv_pokemon_empty_state</string>
    <string name="et_pokemon_type">Types</string>
    <string name="et_pokemon_weight">Weight</string>
    <string name="et_pokemon_height">Height</string>
    <string name="rb_male_text">Male</string>
    <string name="rb_female_text">Female</string>
    <string name="iv_pokemon_details_image">iv_pokemon_details_image</string>
    <string name="tv_moves_heading">Moves</string>
    <string name="tv_gender_heading">Gender</string>
    <string name="tv_gender_add_pokemon">Gender:</string>
    <string name="empty_list_state_image">Empty list state image</string>
    <string name="weight_unit">" lbs"</string>
    <string name="dialog_button_positive">Yes</string>
    <string name="dialog_button_negative">No</string>
    <string name="menu_action_add_pokemon">Menu action add pokemon</string>
    <string name="gender_female">F</string>
    <string name="gender_male">M</string>
    <string name="pokemon_details_toolbar_title">Pokemon Details</string>
    <string name="add_pokemon_toolbar_title">Add Pokemon</string>
    <string name="toolbar_pokemon_list_title">Pokemon</string>
    <string name="menu_item_logout">Logout</string>
    <string name="nav_student_name">Krešimir Valjevac</string>
    <string name="nav_student_mail">student@infinum.hr</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="login_pokemon_logo">Login Pokemon logo</string>
    <string name="pokeball_image_login">Pokeball image login</string>
    <string name="btn_log_in">Log in</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="et_password_hint">Password</string>
    <string name="et_email_hint">Email</string>
    <string name="user_email_login_icon">User email login icon</string>
    <string name="user_password_login_icon">User password login icon</string>
    <string name="et_nickname_hint">Nickname</string>
    <string name="sign_up_activity_title">Sign up</string>
    <string name="et_confirm_password_hint">Confirm password</string>
    <string name="toolbar_title_sign_up">Sign up</string>
    <string name="authorization_header_content">Token token=%1$s, email=%2$s</string>
    <string name="progress_load_description">Loading pokemon list</string>
    <string name="no_internet_conn">No internet connection</string>
    <string name="empty_field_warning">This field cannot be empty</string>
    <string name="list_load_error">Failed to load pokemon list</string>
    <string name="signing_in_progress_text">Signing in</string>
    <string name="saving_pokemon">Saving your pokemon</string>
    <string name="details_transit">DetailsTransition</string>
    <string name="creating_your_account">Creating your account</string>
    <string name="pokemon_saved">Successfully saved your pokemon</string>
    <string name="pokemon_save_failed">Failed to create Pokemon</string>
    <string name="password_length_warning">Password has to be 8 characters long</string>
    <string name="loading_pokemon_list">Loading pokemon list...</string>
    <string name="like_pokemon_icon">Like pokemon icon</string>
    <string name="dislike_pokemon_icon">Dislike pokemon icon</string>
    <string name="like_pokemon">Like</string>
    <string name="dislike_pokemon">Dislike</string>
    <string name="enter_comment_hint">Enter your comment</string>
    <string name="comments_label">Comments</string>
    <string name="btn_create_comment_desc">Button create comment icon</string>
    <string name="empty_coment_error">Cannot send an empty comment</string>
    <string name="btn_show_all_comments">Show all</string>
    <string name="comments_fragment_default_title">Pokemon comments</string>
    <string name="comments">comments</string>
    <string name="not_assigned">Not assigned</string>
    <string name="progress_dialog_hang_on">Hang on a sec...</string>
    <string name="dialog_done">Done</string>
    <string name="not_available">N/A</string>
    <string name="no_comments_icon">No comments icon</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="passwords_not_match_warning">Passwords do not match</string>
    <string name="registration_successful">Registered successfully!</string>
    <string name="retry">Retry</string>
    <string name="delete_comment">Delete comment</string>
    <string name="delete_comment_desc">Do you want to delete the selected comment?</string>
    <string name="comment_not_owner">You\'re not the comment owner</string>
    <string name="delete_success">Successfully deleted</string>
    <string name="delete_fail">Delete failed</string>
    <string name="accounts_settings">Accounts settings</string>
    <string name="email_address">Email address</string>
    <string name="username">Username</string>
    <string name="user_not_found">User not found</string>
    <string name="email_updated">Email succesfully updated</string>
    <string name="account_delete_desc">Upon ticking the checkbox and confirming the changes, your user account will be deleted.</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="delete_account">Delete account</string>
    <string name="user_settings">User settings</string>
</resources>
