<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_login_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_login_pokemon_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pokemon_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/login_pokemon_logo"/>

    <ImageView
        android:id="@+id/iv_login_pokeball_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pokeball"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/iv_login_pokemon_logo"
        android:contentDescription="@string/pokeball_image_login"/>

    <LinearLayout
        android:id="@+id/ll_email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_login_pokeball_image"
        android:orientation="horizontal"
        android:weightSum="20">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mail"
            android:layout_marginTop="15dp"
            android:layout_weight="3"
            android:contentDescription="@string/user_email_login_icon"/>

        <EditText
            android:id="@+id/et_user_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_email_hint"
            android:inputType="textEmailAddress"
            android:layout_weight="16"
            style="@style/EditTextTheme"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_email_container"
        android:orientation="horizontal"
        android:weightSum="20">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock"
            android:layout_marginTop="15dp"
            android:layout_weight="3"
            android:contentDescription="@string/user_password_login_icon"/>

        <EditText
            android:id="@+id/et_user_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_password_hint"
            android:layout_weight="16"
            android:inputType="textPassword"
            android:fontFamily="@android:string/defaultMsisdnAlphaTag"
            android:drawableRight="@drawable/ic_visibility_off"
            android:drawableEnd="@drawable/ic_visibility_off"
            style="@style/EditTextTheme"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_password_container"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <FrameLayout
            android:id="@+id/fl_btn_log_in_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/btn_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/btn_log_in"
                android:textColor="@color/white"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_register_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/btn_sign_up"
                android:textColor="@color/colorPrimary"/>
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>