<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_signup_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
        android:title="@string/toolbar_title_sign_up"
        app:titleTextColor="@color/white"
        android:fitsSystemWindows="true"/>

    <RelativeLayout
        android:id="@+id/rl_signup_form_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:id="@+id/ll_signup_email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_high"
            android:orientation="horizontal"
            android:weightSum="20">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mail"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_weight="3"
                android:contentDescription="@string/user_email_login_icon"/>

            <EditText
                android:id="@+id/et_signup_user_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/et_email_hint"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/et_signup_user_nickname"
                android:layout_weight="16"
                style="@style/EditTextTheme"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_signup_nickname_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_signup_email_container"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="horizontal"
            android:weightSum="20">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_weight="3"
                android:contentDescription="@string/user_password_login_icon"/>

            <EditText
                android:id="@+id/et_signup_user_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/et_nickname_hint"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@+id/et_signup_user_password"
                android:layout_weight="16"
                style="@style/EditTextTheme"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_signup_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_signup_nickname_container"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="horizontal"
            android:weightSum="20">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_weight="3"
                android:contentDescription="@string/user_password_login_icon"/>

            <EditText
                android:id="@+id/et_signup_user_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/et_password_hint"
                android:layout_weight="16"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/et_signup_user_confirm_password"
                android:drawableRight="@drawable/ic_visibility_off"
                android:drawableEnd="@drawable/ic_visibility_off"
                style="@style/EditTextTheme"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_signup_password_confirm_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_signup_password_container"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="horizontal"
            android:weightSum="20">

            <View
                android:layout_height="@dimen/layout_height_xxx_large"
                android:layout_width="0dp"
                android:layout_weight="3"/>

            <EditText
                android:id="@+id/et_signup_user_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/et_confirm_password_hint"
                android:layout_weight="16"
                android:inputType="textPassword"
                style="@style/EditTextTheme"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ll_signup_password_confirm_container"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_xxx_high">

            <Button
                android:id="@+id/btn_register_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_up"
                style="@style/FlatButtonColoredTheme"/>
        </LinearLayout>
    </RelativeLayout>

    <valjevac.kresimir.pokemonApp.custom.ProgressView
        android:id="@+id/pv_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="gone"
        app:text="@string/creating_your_account"
        app:progressBarType="horizontal"/>
</RelativeLayout>