<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_user_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:title="@string/toolbar_pokemon_list_title"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolbarTheme"/>

    <TextView
        android:id="@+id/tv_account_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tb_user_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xxx_high"
        android:textSize="@dimen/text_size_normal"
        android:text="@string/username"
        tools:text="Username"/>

    <TextView
        android:id="@+id/tv_account_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_account_username_label"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_xxx_large"
        android:textColor="@color/colorPrimary"
        tools:text="Username"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/tv_account_username"
        android:layout_marginTop="@dimen/margin_high">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_high"
                android:layout_marginStart="@dimen/margin_high"/>

            <EditText
                android:id="@+id/et_settings_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_email_label"
                android:layout_marginTop="@dimen/margin_small"
                android:inputType="textEmailAddress"
                android:layout_alignStart="@id/tv_email_label"
                android:layout_alignLeft="@id/tv_email_label"
                android:layout_marginRight="@dimen/margin_high"
                android:layout_marginEnd="@dimen/margin_high"
                style="@style/EditTextTheme"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_save_user_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_save"
        style="@style/FlatButtonColoredTheme"/>

</RelativeLayout>