<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/text_icons">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_pokemon_list"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            android:title="@string/toolbar_pokemon_list_title"
            android:background="?attr/colorPrimary"
            android:theme="@style/ToolbarTheme"/>

        <LinearLayout
            android:id="@+id/ll_empty_state_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pokeball_placeholder"
                android:contentDescription="@string/empty_list_state_image"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_no_pokemons"
                android:layout_gravity="center"
                android:padding="@dimen/padding_small"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_no_pokemons_desc"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/secondaryText"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_list_items_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_marginTop="?attr/actionBarSize">

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/srl_recycler_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_pokemon_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.RecyclerView>
            </android.support.v4.widget.SwipeRefreshLayout>
        </LinearLayout>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nvDrawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/drawer_view"/>
</android.support.v4.widget.DrawerLayout>